--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2865,6 +2865,10 @@ a.back {
 /*------------------------------------*\
     #Footer
 \*------------------------------------*/
+.img-fluid, .img-thumbnail {
+  max-width: 100%;
+  height: 600px !important;
+}
 .footer {
   padding-top: 20px;
   position: relative;
